tests/integration/snapshots/integration__conformance__n_object_bad_value.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["x", truth]
stdout --- 
<empty>
stderr --- 
error: unexpected character `t`. expected start of a json value
 --> stdin:1:7
  |
1 | ["x", truth]
  |       ^
